# nostr-mail

./: .dockerignore  .env.example  .gitignore  .gitmodules  404.html  CNAME  Dockerfile  LEGACY.md  LICENSE  README.md  RELEASE_NOTES.md  WorkLog.md  dev.Dockerfile  docker-compose-legacy.yml  docker-compose.yml  hourly-work.html  index.html  inspect_dm_encryption.py  meeting_with_patricia.md  mkdocs.yml  query_messages_by_npub.py  requirements.txt  setup.cfg  sitemap.xml  test_email_python.py  test_email_server.sh  test_imap.sh  test_sync_sent.sh  update_version.py  zapstore.yaml
.github/workflows/: build-windows.yml  build.yml  mkdocs-deploy.yml
NIP/: index.html
Profiles/: index.html
Techstack/: index.html
WorkLog/: index.html
app/: Dockerfile  compose.kv  compose.py  contacts.kv  contacts.py  conversations.kv  conversations.py  dev-requirements.txt  main.kv  main.py  profile.kv  profile.py  relays.kv  relays.py  requirements.txt  rst_test.py  settings.kv  settings.py  ui.py  util.py  widgets.py
architecture/: index.html
bip39-encode/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  bip39_POS.txt  cover_POS.txt  safe-words.txt  shortest_words_POS.txt
bip39-encode/languages/english/: body.cfg  cover.yaml  cover_POS.txt  english_bip39_POS.txt  payload.yaml  subject.cfg
bip39-encode/languages/german/: README.md
bip39-encode/src/: grammar.rs  grammar_parser.pest  lib.rs  main.rs
development/: index.html
docs/: 404.html  NIP.md  Profiles.md  README.md  Techstack.md  WorkLog.md  amethyst-immediate-notifications.md  architecture.md  development.md  encryption-architecture.md  glossia-design.md  glossia-seal-armor.md  hourly-work.html  index.html  index.md  installation.md  legacy.md  nip44.md  nip44.py  nostr-clients.md  nostr-mail-spec.md  pynostr.md  quick-start.md  related_work.md  sitemap.xml
docs/NIP/: index.html
docs/Profiles/: index.html
docs/Techstack/: index.html
docs/WorkLog/: index.html
docs/amethyst-immediate-notifications/: index.html
docs/architecture/: index.html
docs/development/: index.html
docs/encryption-architecture/: index.html
docs/glossia-design/: index.html
docs/glossia-seal-armor/: index.html
docs/installation/: index.html
docs/landing/: index.html
docs/legacy/: index.html
docs/nip44/: index.html
docs/nostr-clients/: index.html
docs/nostr-mail-spec/: index.html
docs/pages/: compose.md  contacts.md  direct-messages.md  drafts.md  inbox.md  profile.md  sent.md  settings.md
docs/pages/compose/: index.html
docs/pages/contacts/: index.html
docs/pages/direct-messages/: index.html
docs/pages/drafts/: index.html
docs/pages/inbox/: index.html
docs/pages/profile/: index.html
docs/pages/sent/: index.html
docs/pages/settings/: index.html
docs/quick-start/: index.html
docs/related_work/: index.html
docs/search/: search_index.json
glossia-wasm/: Cargo.toml
installation/: index.html
legacy/: index.html
mock-email/: .dockerignore  CONNECTING.md  Cargo.toml  README.md
mock-email/src/: config.rs  imap.rs  lib.rs  main.rs  smtp.rs  store.rs  test_utils.rs  types.rs
mock-email/tests/: integration_tests.rs
mock-relay/: .dockerignore  Cargo.toml  README.md  Untitled  test_connection.rs
mock-relay/examples/: basic_usage.rs  generate_fake_events.rs
mock-relay/src/: config.rs  lib.rs  main.rs  protocol.rs  relay.rs  server.rs  store.rs  test_utils.rs  types.rs
nip44/: index.html
nostr-mail-crypto/: Cargo.toml  README.md
nostr-mail-crypto/src/: lib.rs
nostr-mail-crypto/tests/: web.rs
nostrmail/: callbacks.py  dashboard.py  dashboard.yaml  utils.py  vanity.py
pages/compose/: index.html
pages/contacts/: index.html
pages/direct-messages/: index.html
pages/drafts/: index.html
pages/inbox/: index.html
pages/profile/: index.html
pages/sent/: index.html
pages/settings/: index.html
quick-start/: index.html
related_work/: index.html
search/: search_index.json
tauri-app/: .cursorrules  .gitignore  README.md  mock-relay-config.json  run-browser-dev.bat  run-browser-dev.sh  serve-frontend.sh
tauri-app/backend/: .gitignore  Cargo.toml  Dockerfile  build_and_deploy_debug.sh  build_and_deploy_release.sh  clean_builds.sh  entitlements.plist  nostr-mail-config.json  tauri.conf.json
tauri-app/backend/icons/: icon.icns
tauri-app/backend/schema/: nostr_mail.capnp
tauri-app/backend/src/: crypto.rs  database.rs  email.rs  keychain.rs  lib.rs  main.rs  nostr.rs  nostr_mail_capnp.rs  state.rs  storage.rs  types.rs
tauri-app/backend/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/frontend/: Dockerfile  index.html  main.js  storage-service.js  styles.css
tauri-app/frontend/js/: README.md  app-state.js  app.js  contacts-service.js  crypto-service.js  database-service.js  dm-service.js  dom-manager.js  email-service.js  glossia-service.js  notification-service.js  profile-manager.js  tauri-service.js  utils.js
tauri-app/frontend/styles/: avatars.css  buttons.css  contacts.css  dark-mode.css  dm.css  email.css  forms.css  loading.css  modals.css  navigation.css  qr-scanner.css  relay.css  responsive.css  utilities.css
