[metadata]
name = nostrmail
version = 1.0.4-beta
author = Asher Pembroke
author_email = apembroke@gmail.com
description = Nostr email client
url = https://github.com/asherp/nostr-mail
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
	Programming Language :: Python :: 3.8
	Operating System :: OS Independent
	License :: OSI Approved :: Apache Software License
license = Apache License Version 2.0

[options]
python_requires = >= 3.8
include_package_data = True
packages = find:
install_requires =
  nostr
  plotly
  dash


