[package]
name = "bip39-encode"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
nlprule = "0.6"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["blocking"] }
clap = { version = "4.4", features = ["derive"] }
regex = "1.10"
flate2 = "1.0"
csv = "1.3"
pest = "2.7"
pest_derive = "2.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"