[package]
name = "glossia-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly wrapper for glossia encode/decode — runs BIP39 steganography directly in the browser"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
glossia = { path = "../glossia", default-features = false, features = ["wasm"] }
wasm-bindgen = "0.2"
base64 = "0.22"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
