[package]
name = "mock-email"
version = "0.1.0"
edition = "2021"
description = "Mock email server (SMTP/IMAP) for testing"
authors = ["Asher Pembroke"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
rand = "0.8"
uuid = { version = "1.0", features = ["v4"] }
mailparse = "0.14"
futures-util = "0.3"
base64 = { version = "0.21", features = ["alloc"] }

[[bin]]
name = "mock-email"
path = "src/main.rs"
