[package]
name = "mock-relay"
version = "0.1.0"
edition = "2021"
description = "Mock Nostr relay server for testing"
authors = ["Asher Pembroke"]

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
log = "0.4"
env_logger = "0.11"
rand = "0.8"
hex = "0.4"
nostr-sdk = { version = "0.42", features = ["nip04", "nip44"], default-features = false }
bip39 = "2.2"

[features]
default = []

[[bin]]
name = "mock-relay"
path = "src/main.rs"

[[example]]
name = "generate_fake_events"
path = "examples/generate_fake_events.rs"

[[bin]]
name = "test_connection"
path = "test_connection.rs"
